Css fixes: left and right panel overlap with stateEditor, bottom gadget panel overlaps if the state contains large data.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -2035,21 +2035,23 @@ div#ng-curtain {
 }
 
 .oppia-bottom-editor-gadget-panel {
-  bottom: 100px;
+  top: 95%;
   left: 37%;
   max-height: 135px;
   min-width: 150px;
+  position: relative;
+  max-width: 400px;
 }
 
 .oppia-right-editor-gadget-panel {
   left: 50%;
-  margin-left: 285px;
+  margin-left: 355px;
   top: 35px;
   width: 150px;
 }
 
 .oppia-left-editor-gadget-panel {
-  margin-right: 285px;
+  margin-right: 355px;
   right: 50%;
   top: 35px;
   width: 150px;
